--- a/angular.json
+++ b/angular.json
@@ -85,14 +85,18 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/ngx-toastr/toastr.css"
+
             ],
             "scripts": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-
-
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+        
+                "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/font-awesome/css/font-awesome.min.css"
 
             ],
             "assets": [
