--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.2.0",
     "jquery": "^3.2.1",
+    "ngx": "^2.4.0",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
