--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "font-awesome": "^4.2.0",
     "jquery": "^3.2.1",
     "ng2-bootstrap-modal": "^1.0.1",
+    "ngx-store": "^2.1.0",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
+    "sass-loader": "^7.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular-devkit/build-angular": "^0.12.2",
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
