--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ngx-pwa/local-storage": "^7.4.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
-    "font-awesome": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ng2-bootstrap-modal": "^1.0.1",
     "ngx-store": "^2.1.0",
