--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "sass-loader": "^7.1.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
